# spotify-plex-dl

./: .gitignore  Cargo.toml  README.md  build.sh
.cargo/: config.toml
src/: main.rs  track_album_artist.rs
src/plex/: client.rs  mod.rs
src/plex/matcher/: character_replacement.rs  forward_backward.rs  levenshtein.rs  mod.rs  remove_sections.rs
src/plex/models/: extras.rs  metadata.rs  mod.rs  providers.rs
src/spotify/: mod.rs
