[package]
name = "spotify-plex-dl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.83"
clap = { version = "4.5.20", features = ["derive"] }
clap_derive = "4.5.18"
env_logger = "0.11.5"
futures = "0.3.31"
futures-util = "0.3.31"
levenshtein = "1.0.5"
radsort = "0.1.1"
reqwest = { version = "0.12.8", features = [
    "json",
    "rustls-tls",
    "http2",
], default-features = false }
rspotify = { version = "0.13.3", features = [
    "cli",
    "client-ureq",
    "env-file",
    "ureq-rustls-tls",
], default-features = false }
serde = "1.0.210"
serde-xml-rs = "0.6.0"
serde_derive = "1.0.210"
tokio = { version = "1.40.0", features = ["full"] }
